@@ -4,6 +4,8 @@ CHANGELOG
 * class ServiceGroup: extend __construct with $fromTemplateXml
 * class ServiceStore: extend for API_newService()/newServiceGroup()/API_newServiceGroup()
 * class NatRule: added support for floating-ip in NAT rules
+* class SecurityRule: added support for URL Categories
+* class App : added support for technology, categories fields
 
 utils:
 address-edit: new filter tag has / has.nocase / has.regex and tag.count >,<,=,! / object is.recursive.member.of
@@ -12,6 +14,7 @@ override-finder: supporting scenario where template defined objects are not pres
 rules-edit: new filter 'service has.recursive', 'secprof av-profile.is.set', 'secprof as-profile.is.set', 'secprof url-profile.is.set', 'secprof wf-profile.is.set', 'secprof vuln-profile.is.set'
 rules-edit: new filter 'secprof file-profile.is', 'secprof file-profile.is.set', 'secprof data-profile.is', 'secprof data-profile.is.set'
 rules-edit: new filter 'service has.only', 'user has', 'user has.regex', 'url.category is.any'
+rules-edit: new filter 'app technology.is', 'app category.is', 'app subcategory.is'
 rules-edit: new action 'name-Rename'
 rules-edit: action 'tag-Add-Force' new field 'tagColor' to setColor for forced Tag creation
 rules-edit: action 'description-append' new field 'newline' as boolean parameter no/yes
